--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,10 @@ body {
     text-align: right;
 }
 
+.display-prev {
+    height: 18px;
+}
+
 .display-wrap .display-num {
     display: flex;
     align-items: center;
@@ -99,7 +103,6 @@ body {
 .wrap {
     display: flex;
     height: 80%;
-    border: 1px solid black;
 }
 
 .numbers {
@@ -128,7 +131,7 @@ body {
     flex: 1;
 }
 
-.numbers .operator{
+.numbers .operator, #operate{
     background-color: #c2c2c2;
     color: black;
 }
