--- a/styles/style.css
+++ b/styles/style.css
@@ -38,21 +38,27 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #ffffffa9;
 }
 
 .container {
+    background-color: #252222e1;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border: 3px solid rgba(31, 30, 30, 0.513);
     width: 400px;
     height: 600px;
     margin: auto;
     padding: 10px;
-    border: 1px solid black;
     display: flex;
     flex-flow: column nowrap;
-    row-gap: 10px;
+    row-gap: 15px;
+    border-radius: 8px;
 }
 
 .display-wrap {
-    border: 1px solid black;
+    border-radius: 5px;
+    box-shadow: rgba(207, 226, 230, 0.685) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    background-color: rgb(207, 226, 230);
     box-sizing: content-box;
     height: 20%;
     padding: 0px 25px;
@@ -64,7 +70,8 @@ body {
 
 .display-prev {
     height: 18px;
-    padding-top: 10px;
+    padding-top: 15px;
+    font-size: 20px;
 }
 
 .display-wrap .display-num {
@@ -77,7 +84,6 @@ body {
 
 .btns {
     height: 80%;
-    /* border: 1px solid black; */
     display: flex;
     flex-flow: column;
     row-gap: 10px;
@@ -88,7 +94,6 @@ body {
     align-items: center;
     justify-content: space-evenly;
     height: 20%;
-    /* border: 1px solid black; */
     gap: 15px;
 }
 
@@ -99,8 +104,11 @@ body {
     font-size: 30px;
     font-weight: 600;
     flex: 1 0 auto;
-    background-color: rgb(255, 97, 97);
+    background-color: rgba(255, 119, 119, 0.822);
+    box-shadow: rgba(255, 119, 119, 0.479) 0px 0px 0px 2px, rgba(6, 24, 44, 0.692) 0px 4px 6px -1px, rgba(255, 255, 255, 0.055) 0px 1px 0px inset;
     color: white;
+    border: 2px solid rgba(255, 119, 119, 0.541); 
+    border-radius: 10px;
 }
 
 .wrap {
@@ -115,13 +123,13 @@ body {
     align-content: space-between;
     justify-content: space-between;
     width: 100%;
-    /* border: 1px solid black; */
     column-gap: 15px;
 }
 
 .numbers button, #number-sign {
-    border: 1px solid gray;
-    background-color: #424242;
+    box-shadow: rgba(15, 15, 15, 0.726) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    border: 2px solid rgba(15, 15, 15, 0.835);
+    background-color: #1a1818;
     color: white;
     display: flex;
     justify-content: center;
@@ -132,11 +140,15 @@ body {
     font-size: 40px;
     font-weight: 700;
     flex: 1 0 100%;
+    border-radius: 10px;
 }
 
 .numbers .operator, #operate, #number-sign{
-    background-color: #c2c2c2;
-    color: black;
+    box-shadow: rgba(15, 15, 15, 0.24) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+    border: 2px solid rgba(15, 15, 15, 0.356);
+    background-color: #867f7fa9;
+    color: white;
+    color: white;
 }
 
 #number-sign {
